k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-kiosk
  labels:
    app: ha-kiosk
spec:
  type: ClusterIP
  selector:
    app: ha-kiosk
  ports:
    - name: http
      port: 80
      targetPort: http
