k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-kiosk
  labels:
    app: ha-kiosk
spec:
  rules:
    - host: kiosk.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-kiosk
                port:
                  name: http
